; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/iicbus/extr_iicsmb.c_iicsmb_detach.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/iicbus/extr_iicsmb.c_iicsmb_detach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iicsmb_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @iicsmb_detach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iicsmb_detach(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.iicsmb_softc*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i64 @device_get_softc(i32 %4)
  %6 = inttoptr i64 %5 to %struct.iicsmb_softc*
  store %struct.iicsmb_softc* %6, %struct.iicsmb_softc** %3, align 8
  %7 = load i32, i32* %2, align 4
  %8 = call i32 @bus_generic_detach(i32 %7)
  %9 = load i32, i32* %2, align 4
  %10 = call i32 @device_delete_children(i32 %9)
  %11 = load %struct.iicsmb_softc*, %struct.iicsmb_softc** %3, align 8
  %12 = getelementptr inbounds %struct.iicsmb_softc, %struct.iicsmb_softc* %11, i32 0, i32 0
  %13 = call i32 @mtx_destroy(i32* %12)
  ret i32 0
}

declare dso_local i64 @device_get_softc(i32) #1

declare dso_local i32 @bus_generic_detach(i32) #1

declare dso_local i32 @device_delete_children(i32) #1

declare dso_local i32 @mtx_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
